# practice-sosnin

./: .gitignore  CMakeLists.txt
200128/: 01.cpp
210204/: 01.cpp
210211/: 01.cpp
210218/: 01.cpp
210225/: 01.cpp
210304/: 01.cpp
210311/: 01.cpp
210413/: calc_test.cpp  calc_test_c.c
210413/lib/include/: calc.h
210413/lib/src/: calc.c
210420/: CMakeLists.txt  README.md  calc_test_c.c
210420/examples/: 01.c  02.c
210420/lib/include/: calc.h
210420/lib/src/: calc.c
210427/: 01.cpp
210601/problem/: any.h  test_any.cpp
210601/solution/: CMakeLists.txt
